--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 
 <body>
   <form action="">
-
+    <div id="top">
+      <p>This is not a real online service! You know you need something
+        like this in your life to help you realize your deepest dreams.
+        Sign up now to get started.
+      </p>
+      <p>
+        You know you want to.
+      </p>
+    </div>
+    <div id="middle">
+      <h1>Let's do this!</h1>
+    </div>
+    <div id="bottom">
+      <button>Create Account</button>
+    </div>
   </form>
 </body>
 
