more styling w/ css flex

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
         <div class="one">
           <div>
-            <label for="firstName">First name</label>
+            <label for="firstName">FIRST NAME</label>
             <br>
             <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John" required>
           </div>
           <div>
-            <label for="lastName">Last name</label>
+            <label for="lastName">LAST NAME</label>
             <br>
             <input type="text" name="lastName" id="lastName" minlength="5" maxlength="20" placeholder="Doe" required>
           </div>
@@ -47,12 +47,12 @@
 
         <div class="two">
           <div>
-            <label for="email">Email address</label>
+            <label for="email">EMAIL </label>
             <br>
             <input type="email" name="email" id="email" placeholder="John.Doe@yahoo.com" required>
           </div>
           <div>
-            <label for="phone">Phone number</label>
+            <label for="phone">PHONE NUMBER</label>
             <br>
             <input type="number" name="phone" id="phone" maxlength="15" placeholder="(404)111-1111" required>
           </div>
@@ -60,12 +60,12 @@
 
         <div class="three">
           <div>
-            <label for="pass">Password</label>
+            <label for="pass">PASSWORD</label>
             <br>
             <input type="password" name="pass" id="pass" maxlength="15" placeholder="*******" required>
           </div>
           <div>
-            <label for="passConf">Password Confirm</label>
+            <label for="passConf">PASSWORD CONFIRM</label>
             <br>
             <input type="password" name="passConf" id="passConf" maxlength="15" placeholder="*******" required>
           </div>
