working on body  proper height and width

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
       </p>
     </div>
     <form id="middle">
-      <h1>Let's do this!</h1>
       <div class="form-inputs">
-
+        <p id="title">Let's do this!</p>
         <div class="one">
           <div>
             <label for="firstName">FIRST NAME</label>
@@ -75,10 +74,11 @@
     </form>
     <div id="bottom">
       <button>Create Account</button>
+      <p>Already have an account?
+        <link rel="stylesheet" href="Log in">
+      </p>
     </div>
   </div>
 </body>
 
 </html>
-
-
