worked on paragraph positioning and currently working on form position

--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
 
   <div id="information">
     <div id="top">
-      <p>This is not a real online service! You know you need something
-        like this in your life to help you realize your deepest dreams.
-        Sign up now to get started.
-      </p>
-      <p>
-        You know you want to.
-      </p>
+      <div class="p1-p2">
+        <p id="paragraph-one">This is not a real online service! You know you need something
+          like this in your life to help you realize your deepest dreams.
+          Sign up <i>now</i> to get started.
+        </p>
+        <p id="paragraph-two">
+          You know you want to.
+        </p>
+      </div>
     </div>
+
     <form id="middle">
       <div class="form-inputs">
         <p id="title">Let's do this!</p>
