changed label font-size

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <div class="form-inputs">
         <p id="title">Let's do this!</p>
         <div class="one">
-          <div>
+          <div class="form-labels">
             <label for="firstName">FIRST NAME</label>
             <br>
             <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John" required>
           </div>
-          <div>
+          <div class="form-labels" >
             <label for="lastName">LAST NAME</label>
             <br>
             <input type="text" name="lastName" id="lastName" minlength="5" maxlength="20" placeholder="Doe" required>
@@ -48,12 +48,12 @@
         </div>
 
         <div class="two">
-          <div>
+          <div class="form-labels" >
             <label for="email">EMAIL </label>
             <br>
             <input type="email" name="email" id="email" placeholder="John.Doe@yahoo.com" required>
           </div>
-          <div>
+          <div class="form-labels" >
             <label for="phone">PHONE NUMBER</label>
             <br>
             <input type="number" name="phone" id="phone" maxlength="15" placeholder="(404)111-1111" required>
@@ -61,12 +61,12 @@
         </div>
 
         <div class="three">
-          <div>
+          <div class="form-labels" >
             <label for="pass">PASSWORD</label>
             <br>
             <input type="password" name="pass" id="pass" maxlength="15" placeholder="*******" required>
           </div>
-          <div>
+          <div class="form-labels" >
             <label for="passConf">PASSWORD CONFIRM</label>
             <br>
             <input type="password" name="passConf" id="passConf" maxlength="15" placeholder="*******" required>
