testing changed one input size

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="form-labels">
             <label for="firstName">FIRST NAME</label>
             <br>
-            <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John" required>
+            <input type="text" name="firstName" id="firstName" size="25" minlength="5" maxlength="20" placeholder="John" required>
           </div>
           <div class="form-labels" >
             <label for="lastName">LAST NAME</label>
