website has the proper layout

--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
 
     </form>
     <div id="bottom">
-      <button>Create Account</button>
-      <p>Already have an account?
-        <link rel="stylesheet" href="Log in">
-      </p>
+      <div class="bottom-info">
+        <button>Create Account</button>
+        <p>Already have an account?
+          <link rel="stylesheet" href="Log in">
+        </p>
+      </div>
     </div>
   </div>
 </body>
 
 </html>
+
