playing around with media queries image div needs work

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </div>
 
     <form id="middle">
-      <!-- <div class="dummy-one"> -->
         <div class="form-inputs">
           <p id="title">Let's do this!</p>
           <div class="one">
@@ -41,6 +40,7 @@
               <br>
               <input type="text" name="firstName" id="firstName"  minlength="5" maxlength="20" placeholder="John" required>
             </div>
+            <!-- <div class="blah">blah</div> -->
             <div class="form-labels second-column last-name" >
               <label for="lastName">LAST NAME</label>
               <br>
@@ -76,7 +76,6 @@
             </div>
           </div>
         </div>
-      <!-- </div> -->
     </form>
 
     <div id="bottom">
