rough working draft of media queries for desktop sizes now working on the logo and title

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <div id="image">
+    <h1 class="blah-blah">Blah</h1>
     <img src="halie-west-25xggax4bSA-unsplash (1).jpg" alt="">
   </div>
 
