add logo to image and shadow to form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
 <body>
   <div id="image">
-    <h1 class="blah-blah">Blah</h1>
+    <div class="banner">
+      <div class="container">
+        <img class="logo" src="odin-lined.png" alt="">
+      </div>
+      <h1 class="title-text">Blah</h1>
+    </div>
     <img src="halie-west-25xggax4bSA-unsplash (1).jpg" alt="">
   </div>
 
@@ -33,21 +38,22 @@
       </div>
     </div>
 
-    <form id="middle">
+    <div class="middle-container">
+      <form id="middle">
         <div class="form-inputs">
           <p id="title">Let's do this!</p>
           <div class="one">
             <div class="form-labels first-column first-name">
               <label for="firstName">FIRST NAME</label>
               <br>
-              <input type="text" name="firstName" id="firstName"  minlength="5" maxlength="20" placeholder="John" required>
+              <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John"
+                required>
             </div>
             <!-- <div class="blah">blah</div> -->
-            <div class="form-labels second-column last-name" >
+            <div class="form-labels second-column last-name">
               <label for="lastName">LAST NAME</label>
               <br>
-              <input type="text" name="lastName" id="lastName"  minlength="5" maxlength="20" placeholder="Doe"
-                required>
+              <input type="text" name="lastName" id="lastName" minlength="5" maxlength="20" placeholder="Doe" required>
             </div>
           </div>
 
@@ -55,12 +61,12 @@
             <div class="form-labels first-column email">
               <label for="email">EMAIL </label>
               <br>
-              <input type="email" name="email" id="email"  placeholder="John.Doe@yahoo.com" required>
+              <input type="email" name="email" id="email" placeholder="John.Doe@yahoo.com" required>
             </div>
             <div class="form-labels second-column phone-number">
               <label for="phone">PHONE NUMBER</label>
               <br>
-              <input type="number" name="phone" id="phone"  maxlength="15" placeholder="(404)111-1111" required>
+              <input type="number" name="phone" id="phone" maxlength="15" placeholder="(404)111-1111" required>
             </div>
           </div>
 
@@ -68,17 +74,17 @@
             <div class="form-labels first-column password">
               <label for="pass">PASSWORD</label>
               <br>
-              <input type="password" name="pass" id="pass"  maxlength="15" placeholder="*******" required>
+              <input type="password" name="pass" id="pass" maxlength="15" placeholder="*******" required>
             </div>
             <div class="form-labels second-column password-confirm">
               <label for="passConf">PASSWORD CONFIRM</label>
               <br>
-              <input type="password" name="passConf" id="passConf"  maxlength="15" placeholder="*******"
-                required>
+              <input type="password" name="passConf" id="passConf" maxlength="15" placeholder="*******" required>
             </div>
           </div>
         </div>
-    </form>
+      </form>
+    </div>
 
     <div id="bottom">
       <div class="bottom-info">
@@ -92,6 +98,3 @@
 </body>
 
 </html>
-
-
-
