--- a/index copy.html
+++ b/index copy.html
@@ -16,7 +16,7 @@
 <body>
   <div id="image">
     <div class="banner">
-      <div class="container">
+      <div class="logo-container">
         <img class="logo" src="odin-lined.png" alt="">
       </div>
       <h1 class="title-text">Blah</h1>
@@ -42,20 +42,19 @@
       <form id="middle">
         <div class="form-inputs">
           <p id="title">Let's do this!</p>
-          <div class="one">
+          <!-- <div class="one"> -->
             <div class="form-labels first-column first-name">
               <label for="firstName">FIRST NAME</label>
               <br>
               <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John"
                 required>
             </div>
-            <!-- <div class="blah">blah</div> -->
             <div class="form-labels second-column last-name">
               <label for="lastName">LAST NAME</label>
               <br>
               <input type="text" name="lastName" id="lastName" minlength="5" maxlength="20" placeholder="Doe" required>
             </div>
-          </div>
+          <!-- </div> -->
 
           <div class="two">
             <div class="form-labels first-column email">
