--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="image">
     <div class="banner">
-      <div class="container">
+      <div class="logo-container">
         <img class="logo" src="odin-lined.png" alt="">
       </div>
       <h1 class="title-text">Blah</h1>
@@ -49,7 +49,6 @@
               <input type="text" name="firstName" id="firstName" minlength="5" maxlength="20" placeholder="John"
                 required>
             </div>
-            <!-- <div class="blah">blah</div> -->
             <div class="form-labels second-column last-name">
               <label for="lastName">LAST NAME</label>
               <br>
