--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   <div id="image">
     <div class="banner">
       <div class="logo-container">
-        <img class="logo" src="odin-lined.png" alt="">
+        <img id="logo-image" src="odin-lined.png" alt="">
       </div>
       <h1 class="title-text">Blah</h1>
     </div>
-    <img src="halie-west-25xggax4bSA-unsplash (1).jpg" alt="">
+      <img id="full-image" src="halie-west-25xggax4bSA-unsplash.jpg" alt="">
   </div>
+
 
   <div id="information">
     <div id="top">
