--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Cabin+Sketch&display=swap"
     rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
       <div class="logo-container">
         <img id="logo-image" src="odin-lined.png" alt="">
       </div>
-      <h1 class="title-text">Blah</h1>
+      <h1 class="title-text">Title</h1>
     </div>
     <img id="full-image" src="halie-west-25xggax4bSA-unsplash.jpg" alt="">
   </div>
@@ -77,7 +78,7 @@
             <div class="form-labels first-column password">
               <label for="password">*PASSWORD</label>
               <br>
-              <input type="password" id="password" name="password" maxlength="15" placeholder="*******"
+              <input type="password"  id="password" name="password" maxlength="15" placeholder="*******"
                 onfocus="this.placeholder = ''" required>
             </div>
             <div class="form-labels second-column password-confirm">
@@ -93,7 +94,7 @@
 
     <div id="bottom">
       <div class="bottom-info">
-        <button type="submit" form="form-section" >Create Account</button>
+        <button class="button" type="submit" form="form-section" onclick="matchPassword()" >Create Account</button>
         <p>Already have an account?
           <link rel="stylesheet" href="Log in">
         </p>
